--- a/app/src/main/res/drawable/card_background2.xml
+++ b/app/src/main/res/drawable/card_background2.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#302F2F" />
+    <solid android:color="#E64B4848" />
+    <corners android:radius="10dp" />
 
 </shape>
